Se corrigieron los links para navegar entre las paginas

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./xtras/nosotros.html">Nosotros</a></li>
                                     <li><a class="dropdown-item" href="#servicios">Servicios</a></li>
-                                    <li><a class="dropdown-item" href="#galeria">Galeria</a></li>
-                                    <li><a class="dropdown-item" href="#resenas">Reseñas</a></li>
+                                    <li><a class="dropdown-item" href="#revygal">Galeria</a></li>
+                                    <li><a class="dropdown-item" href="#revygal">Reseñas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -142,7 +142,7 @@
                                 <p>(Reviews: 2895)</p>
                             </div>  
                             <div class="price"> 5 Noches - Desde: $529.000 / pers. Antes: <span>$599.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
                     
@@ -162,7 +162,7 @@
                                 <p>(Reviews: 1356)</p>
                             </div>    
                             <div class="price"> 5 Noches - Desde: $499.000 / pers. Antes: <span>$649.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -182,7 +182,7 @@
                                 <p>(Reviews: 2131)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $479.000 / pers. Antes: <span>$599.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -202,7 +202,7 @@
                                 <p>(Reviews: 1859)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $239.000 / pers. Antes: <span>$399.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -222,7 +222,7 @@
                                 <p>(Reviews: 1972)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $249.000 / pers. Antes: <span>$349.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
                         
@@ -245,7 +245,7 @@
                                 <p>(Reviews: 1530)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $289.000 / pers. Antes: <span>$349.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -266,7 +266,7 @@
                                 <p>(Reviews: 1218)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $579.000 / pers. Antes: <span>$699.000 / pers</span></div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -286,7 +286,7 @@
                                 <p>(Reviews: 1044)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $379.000 / pers. Antes: <span>$349.000 / pers</span> </div>
-                            <a href="#book" class="btn">book now</a>
+                            <a href="#book" class="btn">Book now</a>
                         </div>
                     </div>
 
@@ -306,7 +306,7 @@
                                 <p>(Reviews: 1987)</p>
                             </div>
                             <div class="price">5 Noches - Desde: $599.000 / pers. Antes: <span>$749.000 / pers</span> </div>
-                            <a href="./xtras/book.html" class="btn">book now</a>
+                            <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
                 </div>
@@ -428,22 +428,24 @@
                 </div>
             </section> 
             <!--  RESEÑAS y GALERIA -->
-            <section class="reviewsandgallery">               
+            <section class="reviewsandgallery" id="revygal">               
                 <div class="grid-container" width="100%">
                     <div class="item1" >
-                        <p>Reseñas</p>
+                        <h1 class="left-title">
+                            RESEÑAS
+                        </h1>
                     </div>
                     <div class="item2" >
-                        <div class="box" class="item2">
-                            <img src="/media/imgs/ilustrations/joven_1280.png"  width="40%"  alt="">
+                        <div class="box">
+                            <img src="/media/imgs/photos/z_review1_lucas.jpg"  width="40%"  alt="">
                             <h3>Lucas Pellido</h3>
-                            <p>Lorem ipsum dolor sit </p>
+                            <p>Pasé una semana en Bariloche en el mes de marzo. Es sin dudas el destino ideal para quienes buscan combinar aventura y naturaleza. Desde actividades extremas como el escaladas hasta momentos de relax disfrutando de un chocolate caliente, cada día ofrece una nueva experiencia. Es un lugar increible.</p>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
+                                <i class="fas fa-star"></i>
                             </div>
                                 <div class="see-more">
                                     <a href="./xtras/resenas.html" class="btn">Ver mas</a>
@@ -451,7 +453,9 @@
                         </div>
                     </div>
                     <div class="item3" >
-                        <p>Galeria</p>
+                         <h1 class="right-title">
+                            GALERIA
+                        </h1>
                     </div>
                     <div class="item4" >
                         <div class="card" class="item4">
@@ -571,6 +575,7 @@
                     </div>
                 </div>
             </section>
+            <a href="#" class="">Volver</a>
         </main>
         <footer>
                     <!-- Footer Start -->
