--- a/xtras/contacto.html
+++ b/xtras/contacto.html
@@ -39,7 +39,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-graynav">
                 <div class="container">
                     <a class="navbar-brand ps-3 p-2 fs-3" href="#">
-                        <img src="../media/imgs/icons/logo-mod.png" alt="Icono de la marca ViajARG" width="40px" 
+                        <img src="../media/imgs/icons/logo-XcapARG.png" alt="Icono de la marca ViajARG" width="40px" 
                             height="auto" class="d-inline-block align-text-center">
                             Xcap<span style="color:#00BFFF">ARG</span>
                     </a>
@@ -78,8 +78,8 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
                                     <li><a class="dropdown-item" href="../index.html#servicios">Servicios</a></li>
-                                    <li><a class="dropdown-item" href="../index.html#galeria">Galeria</a></li>
-                                    <li><a class="dropdown-item" href="../index.html#resenas">Testimonios</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Galeria</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Reseñas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -123,8 +123,8 @@
                             </form>
                         </div>    
                     </div>
-                 
             </section>
+            <a href="#" class="">Volver</a>
         </main>
         <footer>
                     <!-- Footer Start -->
