--- a/xtras/resenas.html
+++ b/xtras/resenas.html
@@ -34,175 +34,171 @@
             </script>
     </head>
     <body>
+        <header></header>
+        <main>
+            <h1 class="heading">
+                    <span>R</span>
+                    <span>e</span>
+                    <span>s</span>
+                    <span>e</span>
+                    <span>ñ</span>
+                    <span>a</span>
+                    <span>s</span>
+            </h1>
+            <div class="grid-container" id="resenas">
+                <div class="item1">
+                    <div class="box">
+                        <img src="/media/imgs/photos/z_review1_lucas.jpg"  width="40%"  alt="">
+                        <h3>Lucas Pellido</h3>
+                        <p>Pasé una semana en Bariloche en el mes de marzo. Es sin dudas el destino ideal para quienes buscan combinar aventura y naturaleza. Desde actividades extremas como el escaladas hasta momentos de relax disfrutando de un chocolate caliente, cada día ofrece una nueva experiencia. Es un lugar increible.</p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div>
+                </div>
 
-            <h1>HOJA DE RESEÑAS</h1>
+                <div class="item2">
+                    <div class="box">
+                        <img src="/media/imgs/photos/z_review2_maria.jpg"  width="40%"  alt="">
+                        <h3>Camila Apel</h3>
+                        <p>Soy Camila y siempre soñé con conocer la Patagonia argentina. Finalmente, este verano hice realidad ese sueño y visité El Calafate, un pequeño pueblo encantador ubicado en la provincia de Santa Cruz. Pero lo más impresionante del viaje, sin duda, fue el majestuoso glaciar Perito Moreno.
+                        Desde que llegué, todo fue perfecto. El Calafate es tranquilo, acogedor y lleno de naturaleza. Me hospedé en una hostería con vista al Lago Argentino, y cada amanecer era un espectáculo. Pero lo mejor vino al tercer día, cuando hice la excursión al glaciar.Es espectacular!!</p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div>
+                </div>
 
-       <div class="grilla" >
-            <div class="item1" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Lucas Pellido</h3>
-                    <p>Viaje a Bariloche la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
+                <div class="item3">
+                    <div class="box">
+                        <img src="/media/imgs/photos/z_review3_luciana.jpg"  width="40%"  alt="">
+                        <h3>Luciana Lido</h3>
+                        <p>Siempre escuché que las Cataratas del Iguazú eran una de las maravillas naturales del mundo… pero nada, absolutamente nada, se compara con verlas en persona. Este año decidí hacer un viaje al norte de Argentina y descubrí un lugar mágico, lleno de vida, agua y energía. Desde el momento en que llegué, me sentí envuelta por la selva misionera, con su vegetación exuberante, su calor húmedo y el sonido constante de la naturaleza. Pero el verdadero impacto llegó cuando entré al Parque Nacional Iguazú y escuché, a lo lejos, el rugido del agua. Me acerqué caminando por las pasarelas, y ahí estaban: las cataratas. Majestuosas. Inmensas. Increíbles..</p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div> 
+                </div>
+                <div class="item4">
+                    <div class="box">
+                        <img src="/media/imgs/photos/z_review4_charles.jpg"  width="40%"  alt="">
+                        <h3>Charles Leclerc</h3>
+                        <p>Decidí desconectarme un poco del ritmo acelerado de la ciudad. Elegí como destino las sierras de Córdoba, un lugar que siempre me habían recomendado pero que, sinceramente, superó todas mis expectativas.
+                            Estuve una semana recorriendo distintos puntos del Valle de Calamuchita y Traslasierra. Mi base fue en Villa General Belgrano, un pueblo pintoresco con influencia centroeuropea, ideal para descansar pero también para salir de aventura. Desde ahí hice excursiones a La Cumbrecita, un paraíso peatonal en medio del bosque, donde el aire huele a pino y todo parece sacado de un cuento.</p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="item2" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Maria Apel</h3>
-                    <p>Viaje a Calafate la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-            <div class="item3" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Luciana Lido</h3>
-                    <p>Viaje a Cataratas la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
+                <div class="item5">
+                    <div class="box">
+                        <img src="/media/imgs/photos/z_review5_oscar.jpg"  width="40%"  alt="">
+                        <h3>Oscar Piastri</h3>
+                        <p>Fuimos con un grupo de amigos a Mar del Plata, buscando olas, buena vibra y un poco de escape de la rutina. Y la ciudad no decepcionó. Pero Mar del Plata no es solo surf. Hay ferias, cervecerías artesanales, recitales al aire libre y mucha movida juvenil. Volví con ganas de más mar, más surf… y con la certeza de que este viaje se va a repetir.</p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="item4" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Charles Leclerc</h3>
-                    <p>Viaje a Cordoba la semana del ...</p>
-                    <div class="stars">
+                <div class="item6"><div class="box">
+                        <img src="/media/imgs/photos/z_review6_sarah.jpg"  width="40%"  alt="">
+                        <h3>Sarah Collins</h3>
+                        <p>Tenía en mi cabeza la imagen de viñedos al pie de la cordillera y tardes doradas bajo el sol. Finalmente lo hice realidad, y la experiencia fue mucho más de lo que imaginaba.
+                            era un ritual: abrir la ventana, respirar profundo y ver la silueta de los Andes recortada contra el cielo.
+                            Hice un tour por bodegas y me enamoré de cada detalle de este increible lugar.</p>   <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div> </div>
+                <div class="item7"><div class="box">
+                        <img src="/media/imgs/photos/z_review7_esteban.jpg"  width="40%"  alt="">
+                                        <h3>Esteban Ocon</h3>
+                        <p>Siempre fui fanático de los viajes que me conectan con la naturaleza, pero lo que viví en Puerto Madryn fue mucho más que eso. Fue un viaje que me dejó con la boca abierta y el corazón lleno.
+                            Llegué a esta ciudad costera en pleno otoño, con la idea de ver ballenas, pero terminé descubriendo un mundo marino y terrestre que no imaginaba. Desde el primer día, el paisaje me impactó: el mar calmo del Golfo Nuevo, el contraste del desierto patagónico, los cielos inmensos… Es un lugar donde todo parece estar en su estado más puro.</p>  <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div> </div>
+                <div class="item8"> <div class="box">
+                        <img src="/media/imgs/photos/z_review8_michele.jpg"  width="40%"  alt="">
+                                        <h3>Michele Lenox</h3>
+                        <p>Hace tiempo que tenía a Argentina en mi lista de destinos soñados, pero en lugar de ir directo al sur o a Buenos Aires, decidí comenzar por el norte… y fue una decisión perfecta. Mi visita a Salta fue una mezcla de cultura, paisajes increíbles y gente maravillosa.
+                            Apenas llegué, me encantó la ciudad. La arquitectura colonial, las calles adoquinadas, las iglesias antiguas como la Catedral y San Francisco... todo tiene un aire tranquilo, casi mágico. Me quedé en un hotel pequeño en el centro y todas las tardes salía a caminar por las plazas mientras el sol bajaba detrás de los cerros.</p> <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="see-more">
+                            <a href="#resenas" class="btn">Ver mas</a>
+                        </div>
+                    </div></div>
+                <div class="item9"> <div class="box">
+                    <img src="/media/imgs/photos/z_review9_zoe.jpg"  width="40%"  alt="">
+                                        <h3>Zoe Assane</h3>
+                    <p>Siempre tuve una fascinación por los extremos, por esos lugares que parecen estar en los márgenes del mapa. Por eso, viajar a Ushuaia, la ciudad más austral del mundo, fue cumplir un sueño que tenía desde hace años. Y la experiencia superó todo lo que imaginé.
+                    Aterrizar en Ushuaia es una aventura en sí misma. Desde la ventana del avión vi montañas nevadas, bosques infinitos y el canal Beagle recibiéndonos como un espejo de agua helada. El aire es distinto allá abajo, más puro, más limpio… más vivo.</p> <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+                        <i class="fas fa-star"></i>
                     </div>
                     <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
+                        <a href="#resenas" class="btn">Ver mas</a>
                     </div>
-                </div>
-            </div>
-            <div class="item5" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Oscar Piastri</h3>
-                    <p>Viaje a Mar del Plata la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-            <div class="item6" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Sarah Collins</h3>
-                    <p>Viaje a Mendoza la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-            <div class="item7" >
-                 <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Esteban Ocon</h3>
-                    <p>Viaje a Puerto Madryn la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-            <div class="item8" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%"  alt="">
-                    <h3>Michele Lenox</h3>
-                    <p>Viaje a Salta la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-            <div class="item9" >
-                <div class="box">
-                    <img src="/media/imgs/ilustrations/joven_1280.png"  width="50%" alt="">
-                    <h3>Zoe Assane</h3>
-                    <p>Viaje a Usuahia la semana del ...</p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <div class="see-more">
-                        <input type="button" class="btn" value="Ver mas">
-                        </input>
-                    </div>
-                </div>
-            </div>
-       </div>
-    
-
+                </div>   
+            </div> 
+                <a href="#" class="">Volver</a>            
+        </main>
         <footer>
             <nav>
                 <hr/>
