--- a/xtras/terminos.html
+++ b/xtras/terminos.html
@@ -58,5 +58,6 @@
 </p>
 <p>Cualquier controversia derivada del presente acuerdo, su existencia, validez, interpretación, alcance o cumplimiento, será sometida a los Tribunales Ordinarios en lo Comercial con asiento en la Ciudad Autónoma de Buenos Aires.</p>
 </p>
+<a href="#" class="">Volver</a>
 </body>
 </html>
