--- a/xtras/book.html
+++ b/xtras/book.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <!-- ICONO DE CODO A CODO EN LA SOLAPA DEL NAVEGADOR -->
+        <!-- ICONO EN LA SOLAPA DEL NAVEGADOR -->
         <link rel="shortcut icon" href="" type="image/x-icon">
 
         <!-- BOOTSTRAP -->
@@ -39,7 +39,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-graynav">
                 <div class="container">
                     <a class="navbar-brand ps-3 p-2 fs-3" href="#">
-                        <img src="../media/imgs/icons/logo-mod.png" alt="Icono de la marca ViajARG" width="40px" 
+                        <img src="../media/imgs/icons/logo-XcapARG.png" alt="Icono de la marca ViajARG" width="40px" 
                             height="auto" class="d-inline-block align-text-center">
                             Xcap<span style="color:#00BFFF">ARG</span>
                     </a>
@@ -78,8 +78,8 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./nosotros.html">Nosotros</a></li>
                                     <li><a class="dropdown-item" href="../index.html#servicios">Servicios</a></li>
-                                    <li><a class="dropdown-item" href="../index.html#galeria">Galeria</a></li>
-                                    <li><a class="dropdown-item" href="#">Testimonios</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Galeria</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#revygal">Reseñas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -160,6 +160,7 @@
                     
                 </div>
             </section>
+            <a href="#" class="">Volver</a>
         </main>
      
         <footer>
@@ -248,12 +249,14 @@
                 </div>
             </div>
 
+
         </footer>
         <script 
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
                         crossorigin="anonymous">
         </script>
+
     </body>
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
