--- a/xtras/galeria.html
+++ b/xtras/galeria.html
@@ -108,6 +108,7 @@
                 <div></div>
                 <div></div>
             </div>
+            <a href="#" class="">Volver</a>
         </main>
         <footer>
                     <!-- Footer Start -->
