--- a/xtras/preguntasFrecuentes.html
+++ b/xtras/preguntasFrecuentes.html
@@ -39,7 +39,7 @@
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-graynav">
                 <div class="container">
                     <a class="navbar-brand ps-3 p-2 fs-3" href="#">
-                        <img src="../media/imgs/logo-mod.png" alt="Icono de la marca ViajARG" width="40px" 
+                        <img src="../media/imgs/icons/logo-XcapARG.png" alt="Icono de la marca ViajARG" width="40px" 
                             height="auto" class="d-inline-block align-text-center">
                             Xcap<span style="color:#00BFFF">ARG</span>
                     </a>
@@ -63,6 +63,7 @@
         </header>
         <main>
             <h2 style="margin: 150px">Preguntas frecuentes</h2>
+            <a href="#" class="">Volver</a>
         </main>
         <footer>
                     <!-- Footer Start -->
